Fixed sticky heade roverlapping other elements

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -69,6 +69,8 @@ header {
     position: sticky;
     top: 0;
     background-color: $clr-text-light;
+    z-index: 10;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
 
     ul {
         // display: flex;
